adding part of typescript class

--- a/DIO-Typescript/index.html
+++ b/DIO-Typescript/index.html
@@ -6,6 +6,7 @@
     <title>DIO TypeScript</title>
 </head>
 <body>
+    <input id="input" type="text" placeholder="Digite os dados."/>
     <script src="./index.ts"></script>
-4</body>
+</body>
 </html>
